--- a/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/ReportViewer/css/ReportParameter.css
+++ b/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/ReportViewer/css/ReportParameter.css
@@ -46,7 +46,6 @@
     border-bottom: 1px solid black;
     min-width:178px;
     background:#fff 50% 50% repeat-x; 
-    /*z-index:5;*/
     color:black;
     font-size:13px;
     padding-bottom:4px;
@@ -296,9 +295,6 @@
 	margin:0;
 	margin-right:4px;
 }
-.fr-layout-param-top .fr-param-dropdown {
-    z-index: 10;
-}
 .fr-layout-param-top .fr-param-dropdown-input {
 	width:152px;
 }
@@ -328,7 +324,6 @@
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
     border-radius: 2px;
-    z-index: 10;
 }
 .fr-layout-param-top .fr-param-more-item {    
     display: block;
